﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$HeadURL$

2007-02-21 Marc Delisle  <lem9@users.sourceforge.net>
    * pmd/scripts/move.js: bug #1650770, Designer and Mac OSX,
      thanks to Ivan Kirillov

2007-02-17 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: patch #1659347, missing doc for some config,
     thanks to Isaac Bennetch
    * libraries/export/sql.php: undefined variable

2007-02-16 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php, footer.inc.php: avoid generating big links
      after an upload into a BLOB

2007-02-14 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: white page after uploading a 700 Kio BLOB
    * add a warning on main page if mcrypt can't be loaded (bug 1658160)

2007-02-12 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * libraries/database_interface.lib.php: bug #1616486 server_databases does
      not show all databases
    * libraries/sqlparser.data.php: MySQL function and column names, reserved
      and forbidden words updated,
      bug #1657045 Spatial functions not supported
      bug #1657037 Missing column type "geometry"

2007-02-11 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php: some links should open a new page
    * Documentation.html, libraries/navigation_header.inc.php,
      libraries/config.default.php: $cfg['LeftLogoLinkWindow'] to decide
      in which window the logo-linked page will appear
    ### 2.10.0-rc1 released

2007-02-10 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/spanish update, thanks to Daniel Hinostroza

2007-02-09 Marc Delisle  <lem9@users.sourceforge.net>
    * themes/darkblue_orange/img/logo_left.png,
      themes/original/img/logo_left.png: smaller PMA logo for navi

2007-02-08 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * themes/*/css/theme_right.css.php: bug #1653769 browsing highlight disabling
      doesn't work
