@@ -1,5 +1,4 @@
 <?php
-
 /* !!! DO NOT EDIT THIS FILE, EDIT config.inc.php INSTEAD !!! */
 
 /* $Id$ */
@@ -726,7 +725,9 @@ if ($cfg['ShowFunctionFields']) {
        'UNIX_TIMESTAMP',
        'USER',
        'WEEKDAY',
-       'CONCAT'
+       'CONCAT',
+       'HEX',
+       'UNHEX'
     );
 
     // Which column types will be mapped to which Group?
@@ -776,8 +777,8 @@ if ($cfg['ShowFunctionFields']) {
             'LAST_INSERT_ID',
             'USER',
             'CONCAT',
-	    'HEX',
-	    'UNHEX'
+	        'HEX',
+	        'UNHEX'
         ),
 
         'FUNC_DATE'   => array(
